# app/api/api.yaml
@@ -854,11 +854,17 @@ components:
       type: object
       required:
         - phoneNo
+        - firebaseId
       properties:
         phoneNo:
           type: string
           description: User phone number
           example: 6281234567890
+        firebaseId:
+          type: string
+          minLength: 1
+          description: Firebase Cloud Messaging registration token for the user's current device
+          example: fcm-registration-token
     CreateNewAccountResponse:
       type: object
       required:
